# voice-keyboard-linux

./: Cargo.toml  DBUS_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  README.md  flake.nix  shell.nix
src/: audio_control.rs  audio_input.rs  dbus_service.rs  input_event.rs  main.rs  stt_client.rs  tray_icon.rs  virtual_keyboard.rs  whisper_client.rs
vllm/cohere-transcribe/: Makefile  install.sh  vllm-cohere-transcribe.service
