[package]
name = "voice-keyboard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
cpal = "0.15"
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version = "0.27", features = ["user", "fs", "ioctl"] }
regex = "1.0"
http = "1"
tray-icon = "0.17"
parking_lot = "0.12"
gtk = "0.18"
zbus = { version = "4.0", default-features = false, features = ["tokio"] }
hound = "3.5"
reqwest = { version = "0.11", features = ["multipart", "blocking", "json"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
